# cels-widgets

./: CMakeLists.txt
include/cels-widgets/: compositions.h  input.h  layouts.h  presets.h  style.h  theme.h  widgets.h
src/: behavioral.c  focus.c  layouts.c  widgets.c
